meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__journald_provider__test__extra_attr.snap
---
source: memfaultd/src/logs/journald_provider.rs
expression: entry
snapshot_kind: text
---
{
  "ts": "1970-01-01T00:00:01.337+00:00",
  "data": {
    "EXTRA_FIELD": "extra",
    "MESSAGE": "audit: type=1400 audit(1713462571.968:7508): apparmor=\"DENIED\" operation=\"open\" class=\"file\" profile=\"snap.firefox.firefox\" name=\"/etc/fstab\" pid=10122 comm=\"firefox\" requested_mask=\"r\" denied_mask=\"r\" fsuid=1000 ouid=0",
    "_SYSTEMD_UNIT": "user@1000.service"
  }
}
